# edge-ai-traffic-twin

./: .gitignore  README.md
docker/: Dockerfile.cpp  docker-compose-rtsp.yml
docker/mosquitto/: mosquitto.conf
src/: CMakeLists.txt  main.cpp  stream_sim.py
web/: index.html
